--- a/public/projects.json
+++ b/public/projects.json
@@ -5,7 +5,8 @@
     "description": "A simple landing page for a plants shop.",
     "github": "https://github.com/massaracsh7/plants",
     "deploy": "https://massaracsh7.github.io/plants/",
-    "image": "1.png"
+    "image": "1.png",
+    "details": "More info"
   },
   {
     "id": 2,
@@ -13,7 +14,8 @@
     "description": "A website project to help animals find a shelter.",
     "github": "https://github.com/massaracsh7/shelter",
     "deploy": "https://massaracsh7.github.io/shelter/index.html",
-    "image": "2.png"
+    "image": "2.png",
+    "details": "More info"
   },
   {
     "id": 3,
@@ -21,7 +23,8 @@
     "description": "An interactive Minesweeper game.",
     "github": "https://github.com/massaracsh7/minesweeper",
     "deploy": "https://minesweeper-dusky-six.vercel.app",
-    "image": "3.png"
+    "image": "3.png",
+    "details": "More info"
   },
   {
     "id": 4,
@@ -29,7 +32,8 @@
     "description": "A game to learn CSS selectors.",
     "github": "https://github.com/massaracsh7/css-selectors",
     "deploy": "https://massaracsh7.github.io/css-selectors/",
-    "image": "4.png"
+    "image": "4.png",
+    "details": "More info"
   },
   {
     "id": 5,
@@ -37,7 +41,8 @@
     "description": "An e-commerce application for streaming movies.",
     "github": "https://github.com/massaracsh7/movie-stream",
     "deploy": "https://movie-stream-puce.vercel.app",
-    "image": "5.png"
+    "image": "5.png",
+    "details": "More info"
   },
   {
     "id": 6,
@@ -45,7 +50,8 @@
     "description": "A playground/IDE for making GraphQL requests.",
     "github": "https://github.com/massaracsh7/graphiql-app",
     "deploy": "https://graphiql-app-gold.vercel.app",
-    "image": "6.png"
+    "image": "6.png",
+    "details": "More info"
   },
   {
     "id": 7,
@@ -53,7 +59,8 @@
     "description": "A project based on the Rick and Morty API.",
     "github": "https://github.com/massaracsh7/rss-react",
     "deploy": "https://github.com/massaracsh7/rss-react",
-    "image": "7.png"
+    "image": "7.png",
+    "details": "More info"
   },
   {
     "id": 8,
@@ -61,6 +68,7 @@
     "description": "An online store for the Flower Boutique Mirano.",
     "github": "https://github.com/massaracsh7/mirano",
     "deploy": "https://mirano-omega.vercel.app",
-    "image": "8.png"
+    "image": "8.png",
+    "details": "More info"
   }
 ]
